--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "react-dom": "^18.3.1",
   "react-icons": "^5.3.0",
   "react-router-dom": "^6.26.1",
+  "theme-change": "^2.5.0",
   "zustand": "^4.5.5"
  },
  "devDependencies": {
